# rapidgzip-java

./: .gitignore  Dockerfile  README.md  buildspec.yml  pom.xml
examples/: BasicUsage.java  BenchmarkThroughput.java  BenchmarkVsStdlib.java  StreamExample.java
native/: CMakeLists.txt  rapidgzip_ffi.cpp
src/main/java/io/rapidgzip/: NativeLoader.java  RapidGzipException.java  RapidGzipInputStream.java  RapidGzipLineReader.java  RapidGzipNative.java
